--- a/notebooks/05_T_pubmed.ipynb
+++ b/notebooks/05_T_pubmed.ipynb
@@ -2,10 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8df1dd64",
    "metadata": {},
    "source": [
-    "# Publication Transformation\n",
+    "# <a id='toc1_'></a>[Publication Transformation](#toc0_)\n",
     "\n",
     "In this notebook, I have gathered all the raw dataframes that I previously obtained from PubMed through web scraping. \n",
     "\n",
@@ -18,19 +17,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57e25ea5",
    "metadata": {},
    "source": [
-    "INDEX"
+    "**Table of contents**<a id='toc0_'></a>    \n",
+    "- [Publication Transformation](#toc1_)    \n",
+    "  - [Concatenate all the dataframes vertically](#toc1_1_)    \n",
+    "  - [Divide the data in columns](#toc1_2_)    \n",
+    "        - [Description of the fields](#toc1_2_1_1_1_)    \n",
+    "        - [Example of extracted data](#toc1_2_1_1_2_)    \n",
+    "  - [Data cleansing](#toc1_3_)    \n",
+    "  - [Create First Author DF](#toc1_4_)    \n",
+    "    - [Determine the geographical locations of the affiliations](#toc1_4_1_)    \n",
+    "    - [Consider identifying the gender of the author based on their name, recognizing that this method may not always accurately reflect personal gender identity. Exercise sensitivity and be aware of the potential for inaccuracies in the process](#toc1_4_2_)    \n",
+    "\n",
+    "<!-- vscode-jupyter-toc-config\n",
+    "\tnumbering=false\n",
+    "\tanchor=true\n",
+    "\tflat=false\n",
+    "\tminLevel=1\n",
+    "\tmaxLevel=6\n",
+    "\t/vscode-jupyter-toc-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "27fd15f5",
    "metadata": {},
    "source": [
     "___\n",
-    "## Concatenate all the dataframes vertically"
+    "## <a id='toc1_1_'></a>[Concatenate all the dataframes vertically](#toc0_)"
    ]
   },
   {
@@ -210,13 +225,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54dcd350",
    "metadata": {},
    "source": [
     "___\n",
-    "## Divide the data in columns\n",
+    "## <a id='toc1_2_'></a>[Divide the data in columns](#toc0_)\n",
     "\n",
-    "##### Description of the fields\n",
+    "##### <a id='toc1_2_1_1_1_'></a>[Description of the fields](#toc0_)\n",
     "    PMID: PubMed Identifier for the article (PubMed unique identifier).\n",
     "    OWN: Ownership or database where the record is held (e.g., NLM for National Library of Medicine).\n",
     "    STAT: Article status (e.g., MEDLINE).\n",
@@ -255,7 +269,7 @@
     "    PST: Publication Status.\n",
     "    SO: Source (e.g., Journal citation with title, volume, and page).\n",
     "    \n",
-    "##### Example of extracted data\n",
+    "##### <a id='toc1_2_1_1_2_'></a>[Example of extracted data](#toc0_)\n",
     "'PMID- 37815691\\nOWN - NLM\\nSTAT- MEDLINE\\nDCOM- 20231121\\nLR  - 20231123\\nIS  - 1995-8218 (Electronic)\\nIS  - 1673-7067 (Print)\\nIS  - 1995-8218 (Linking)\\nVI  - 39\\nIP  - 12\\nDP  - 2023 Dec\\nTI  - Propofol Brings on the Light for Depression Therapy.\\nPG  - 1891-1894\\nLID - 10.1007/s12264-023-01133-7 [doi]\\nFAU - Yan, Yun\\nAU  - Yan Y\\nAUID- ORCID: 0000-0002-9993-4959\\nAD  - Department of Anesthesiology, China-Japan Friendship Hospital, Chinese Academy of \\n      Medical Sciences and Peking Union Medical College, Beijing, 100029, China.\\nFAU - Ma, Hongli\\nAU  - Ma H\\nAUID- ORCID: 0000-0001-8925-1372\\nAD  - Department of Anesthesiology, China-Japan Friendship Hospital, Chinese Academy of \\n      Medical Sciences and Peking Union Medical College, Beijing, 100029, China.\\nFAU - Zhao, Jing\\nAU  - Zhao J\\nAUID- ORCID: 0000-0002-4640-2609\\nAD  - Department of Anesthesiology, China-Japan Friendship Hospital, Chinese Academy of \\n      Medical Sciences and Peking Union Medical College, Beijing, 100029, China. \\n      zhaojing1009@aliyun.com.\\nLA  - eng\\nPT  - Journal Article\\nDEP - 20231010\\nPL  - Singapore\\nTA  - Neurosci Bull\\nJT  - Neuroscience bulletin\\nJID - 101256850\\nRN  - YI7VU623SF (Propofol)\\nSB  - IM\\nMH  - *Propofol/therapeutic use\\nMH  - Depression/drug therapy\\nPMC - PMC10661581\\nCOIS- The authors declare that there are no conflicts of interest.\\nEDAT- 2023/10/10 12:43\\nMHDA- 2023/11/21 06:43\\nPMCR- 2024/12/01\\nCRDT- 2023/10/10 11:11\\nPHST- 2023/04/11 00:00 [received]\\nPHST- 2023/08/22 00:00 [accepted]\\nPHST- 2024/12/01 00:00 [pmc-release]\\nPHST- 2023/11/21 06:43 [medline]\\nPHST- 2023/10/10 12:43 [pubmed]\\nPHST- 2023/10/10 11:11 [entrez]\\nAID - 10.1007/s12264-023-01133-7 [pii]\\nAID - 1133 [pii]\\nAID - 10.1007/s12264-023-01133-7 [doi]\\nPST - ppublish\\nSO  - Neurosci Bull. 2023 Dec;39(12):1891-1894. doi: 10.1007/s12264-023-01133-7. Epub \\n      2023 Oct 10.'"
    ]
   },
@@ -313,11 +327,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52f2aa11",
    "metadata": {},
    "source": [
     "___\n",
-    "## Data cleansing "
+    "## <a id='toc1_3_'></a>[Data cleansing](#toc0_)"
    ]
   },
   {
@@ -461,10 +474,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e03c3bee",
    "metadata": {},
    "source": [
-    "## Create First Author DF"
+    "## <a id='toc1_4_'></a>[Create First Author DF](#toc0_)"
    ]
   },
   {
@@ -479,10 +491,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90d2cb10",
    "metadata": {},
    "source": [
-    "### Determine the geographical locations of the affiliations"
+    "### <a id='toc1_4_1_'></a>[Determine the geographical locations of the affiliations](#toc0_)"
    ]
   },
   {
@@ -604,10 +615,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8844f91f",
    "metadata": {},
    "source": [
-    "### Consider identifying the gender of the author based on their name, recognizing that this method may not always accurately reflect personal gender identity. Exercise sensitivity and be aware of the potential for inaccuracies in the process\n",
+    "### <a id='toc1_4_2_'></a>[Consider identifying the gender of the author based on their name, recognizing that this method may not always accurately reflect personal gender identity. Exercise sensitivity and be aware of the potential for inaccuracies in the process](#toc0_)\n",
     "\n",
     "**genderize.io** is a free API, but limited at 1000 requests by day.\n",
     "\n",
