--- a/notebooks/_L_SQLalchemy.ipynb
+++ b/notebooks/_L_SQLalchemy.ipynb
@@ -2,18 +2,35 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d27d9a43",
    "metadata": {},
    "source": [
-    "# Load to SQL"
+    "# <a id='toc1_'></a>[Load to SQL](#toc0_)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c1caa1d6",
    "metadata": {},
    "source": [
-    "INDEX "
+    "**Table of contents**<a id='toc0_'></a>    \n",
+    "- [Load to SQL](#toc1_)    \n",
+    "  - [Create neuropapers_db](#toc1_1_)    \n",
+    "  - [Fill neuropapers_db](#toc1_2_)    \n",
+    "    - [universities](#toc1_2_1_)    \n",
+    "    - [countries](#toc1_2_2_)    \n",
+    "    - [publications](#toc1_2_3_)    \n",
+    "    - [journals](#toc1_2_4_)    \n",
+    "    - [affiliations](#toc1_2_5_)    \n",
+    "    - [first_author](#toc1_2_6_)    \n",
+    "    - [last_author](#toc1_2_7_)    \n",
+    "\n",
+    "<!-- vscode-jupyter-toc-config\n",
+    "\tnumbering=false\n",
+    "\tanchor=true\n",
+    "\tflat=false\n",
+    "\tminLevel=1\n",
+    "\tmaxLevel=6\n",
+    "\t/vscode-jupyter-toc-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
    ]
   },
   {
@@ -43,10 +60,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8c48875",
    "metadata": {},
    "source": [
-    "## Create neuropapers_db"
+    "## <a id='toc1_1_'></a>[Create neuropapers_db](#toc0_)"
    ]
   },
   {
@@ -106,12 +122,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "903be648",
    "metadata": {},
    "source": [
     "___\n",
-    "## Fill neuropapers_db\n",
-    "### universities"
+    "## <a id='toc1_2_'></a>[Fill neuropapers_db](#toc0_)\n",
+    "### <a id='toc1_2_1_'></a>[universities](#toc0_)"
    ]
   },
   {
@@ -281,10 +296,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fdb44db",
    "metadata": {},
    "source": [
-    "### countries"
+    "### <a id='toc1_2_2_'></a>[countries](#toc0_)"
    ]
   },
   {
@@ -501,10 +515,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10f6bd45",
    "metadata": {},
    "source": [
-    "### publications"
+    "### <a id='toc1_2_3_'></a>[publications](#toc0_)"
    ]
   },
   {
@@ -517,10 +530,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "342eebbf",
    "metadata": {},
    "source": [
-    "### journals"
+    "### <a id='toc1_2_4_'></a>[journals](#toc0_)"
    ]
   },
   {
@@ -533,10 +545,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e037404",
    "metadata": {},
    "source": [
-    "### affiliations"
+    "### <a id='toc1_2_5_'></a>[affiliations](#toc0_)"
    ]
   },
   {
@@ -549,10 +560,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c643bd2",
    "metadata": {},
    "source": [
-    "### first_author"
+    "### <a id='toc1_2_6_'></a>[first_author](#toc0_)"
    ]
   },
   {
@@ -565,10 +575,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc434be7",
    "metadata": {},
    "source": [
-    "### last_author"
+    "### <a id='toc1_2_7_'></a>[last_author](#toc0_)"
    ]
   },
   {
