--- a/notebooks/Untitled_.ipynb
+++ b/notebooks/Untitled_.ipynb
@@ -267,8 +267,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "8b03b68d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista = '''\n",
+    "         00  index                249 non-null    int32  \n",
+    "         01  Country              249 non-null    object \n",
+    "         02  Official_state_name  249 non-null    object \n",
+    "         03  Sovereignty          249 non-null    object \n",
+    "         04  Alpha_2_code         249 non-null    object \n",
+    "         05  Alpha_3_code         249 non-null    object \n",
+    "         06  mln_2010             249 non-null    float64\n",
+    "         07  mln_2011             249 non-null    float64\n",
+    "         08  mln_2012             249 non-null    float64\n",
+    "         09  mln_2013             249 non-null    float64\n",
+    "         10  mln_2014             249 non-null    float64\n",
+    "         11  mln_2015             249 non-null    float64\n",
+    "         12  mln_2016             249 non-null    float64\n",
+    "         13  mln_2017             249 non-null    float64\n",
+    "         14  mln_2018             249 non-null    float64\n",
+    "         15  mln_2019             249 non-null    float64\n",
+    "         16  mln_2020             249 non-null    float64\n",
+    "         17  mln_2021             249 non-null    float64\n",
+    "         18  mln_2022             249 non-null    float64\n",
+    "         19  gdp_2010             249 non-null    float64\n",
+    "         20  gdp_2011             249 non-null    float64\n",
+    "         21  gdp_2012             249 non-null    float64\n",
+    "         22  gdp_2013             249 non-null    float64\n",
+    "         23  gdp_2014             249 non-null    float64\n",
+    "         24  gdp_2015             249 non-null    float64\n",
+    "         25  gdp_2016             249 non-null    float64\n",
+    "         26  gdp_2017             249 non-null    float64\n",
+    "         27  gdp_2018             249 non-null    float64\n",
+    "         28  gdp_2019             249 non-null    float64\n",
+    "         29  gdp_2020             249 non-null    float64\n",
+    "         30  gdp_2021             249 non-null    float64\n",
+    "         31  gdp_2022             249 non-null    float64\n",
+    "         32  tot_2010             249 non-null    float64\n",
+    "         33  tot_2011             249 non-null    float64\n",
+    "         34  tot_2012             249 non-null    float64\n",
+    "         35  tot_2013             249 non-null    float64\n",
+    "         36  tot_2014             249 non-null    float64\n",
+    "         37  tot_2015             249 non-null    float64\n",
+    "         38  tot_2016             249 non-null    float64\n",
+    "         39  tot_2017             249 non-null    float64\n",
+    "         40  tot_2018             249 non-null    float64\n",
+    "         41  tot_2019             249 non-null    float64\n",
+    "         42  tot_2020             249 non-null    float64\n",
+    "         43  tot_2021             249 non-null    float64\n",
+    "         44  wom_2010             249 non-null    float64\n",
+    "         45  wom_2011             249 non-null    float64\n",
+    "         46  wom_2012             249 non-null    float64\n",
+    "         47  wom_2013             249 non-null    float64\n",
+    "         48  wom_2014             249 non-null    float64\n",
+    "         49  wom_2015             249 non-null    float64\n",
+    "         50  wom_2016             249 non-null    float64\n",
+    "         51  wom_2017             249 non-null    float64\n",
+    "         52  wom_2018             249 non-null    float64\n",
+    "         53  wom_2019             249 non-null    float64\n",
+    "         54  wom_2020             249 non-null    float64\n",
+    "         55  wom_2021             249 non-null    float64\n",
+    "         '''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "a5a10233",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['index',\n",
+       " 'Country',\n",
+       " 'Official_state_name',\n",
+       " 'Sovereignty',\n",
+       " 'Alpha_2_code',\n",
+       " 'Alpha_3_code',\n",
+       " 'mln_2010',\n",
+       " 'mln_2011',\n",
+       " 'mln_2012',\n",
+       " 'mln_2013',\n",
+       " 'mln_2014',\n",
+       " 'mln_2015',\n",
+       " 'mln_2016',\n",
+       " 'mln_2017',\n",
+       " 'mln_2018',\n",
+       " 'mln_2019',\n",
+       " 'mln_2020',\n",
+       " 'mln_2021',\n",
+       " 'mln_2022',\n",
+       " 'gdp_2010',\n",
+       " 'gdp_2011',\n",
+       " 'gdp_2012',\n",
+       " 'gdp_2013',\n",
+       " 'gdp_2014',\n",
+       " 'gdp_2015',\n",
+       " 'gdp_2016',\n",
+       " 'gdp_2017',\n",
+       " 'gdp_2018',\n",
+       " 'gdp_2019',\n",
+       " 'gdp_2020',\n",
+       " 'gdp_2021',\n",
+       " 'gdp_2022',\n",
+       " 'tot_2010',\n",
+       " 'tot_2011',\n",
+       " 'tot_2012',\n",
+       " 'tot_2013',\n",
+       " 'tot_2014',\n",
+       " 'tot_2015',\n",
+       " 'tot_2016',\n",
+       " 'tot_2017',\n",
+       " 'tot_2018',\n",
+       " 'tot_2019',\n",
+       " 'tot_2020',\n",
+       " 'tot_2021',\n",
+       " 'wom_2010',\n",
+       " 'wom_2011',\n",
+       " 'wom_2012',\n",
+       " 'wom_2013',\n",
+       " 'wom_2014',\n",
+       " 'wom_2015',\n",
+       " 'wom_2016',\n",
+       " 'wom_2017',\n",
+       " 'wom_2018',\n",
+       " 'wom_2019',\n",
+       " 'wom_2020',\n",
+       " 'wom_2021']"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columnas = lista.split('\\n')\n",
+    "columnas = [col.strip() for col in columnas]\n",
+    "# columnas = [col.split('') for col in columnas]\n",
+    "columnas = [col.split(' ')[2] for col in columnas if col != '']\n",
+    "columnas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "544664c0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -290,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
