--- a/notebooks/02_ext_countries.ipynb
+++ b/notebooks/02_ext_countries.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "53f439b8",
    "metadata": {},
    "source": [
     "# <a id='toc1_'></a>[Countries](#toc0_)\n",
@@ -23,6 +24,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8fc4cf79",
    "metadata": {},
    "source": [
     "**Table of contents**<a id='toc0_'></a>    \n",
@@ -67,6 +69,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3bb4fb6e",
    "metadata": {},
    "source": [
     "___\n",
@@ -247,6 +250,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "96f2897f",
    "metadata": {},
    "source": [
     "#### <a id='toc1_1_1_2_'></a>[Transform](#toc0_)"
@@ -376,6 +380,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "afc20ea1",
    "metadata": {},
    "source": [
     "#### <a id='toc1_1_1_3_'></a>[ Export as .csv](#toc0_)"
@@ -393,6 +398,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e6c55abf",
    "metadata": {},
    "source": [
     "___\n",
@@ -643,6 +649,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "22e57ebe",
    "metadata": {},
    "source": [
     "#### <a id='toc1_2_1_2_'></a>[Transform Data](#toc0_)\n",
@@ -900,6 +907,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f9231dad",
    "metadata": {},
    "source": [
     "##### <a id='toc1_2_1_2_2_'></a>[gpd: % of gross domestic spending](#toc0_)"
@@ -1145,6 +1153,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "06c9228c",
    "metadata": {},
    "source": [
     "##### <a id='toc1_2_1_2_3_'></a>[res: number of researchers](#toc0_)\n",
@@ -1644,6 +1653,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "665ef3db",
    "metadata": {},
    "source": [
     "#### <a id='toc1_2_1_3_'></a>[Export Data](#toc0_)"
@@ -1664,6 +1674,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "30c3533a",
    "metadata": {},
    "source": [
     "___\n",
@@ -2227,12 +2238,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
+   "id": "b9aa0bcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rename the columns\n",
+    "cols_old = ['index', 'Country', 'Official_state_name', 'Sovereignty', \n",
+    "            'Alpha_2_code', 'Alpha_3_code']\n",
+    "\n",
+    "cols_new = ['country_id', 'country_name', 'official_state_name', 'sovereignty', \n",
+    "            'alpha_2_code', 'alpha_3_code']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "24535a36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for old, new in zip(cols_old, cols_new):\n",
+    "    output = output.rename(columns={old: new})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "afe842fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['country_id', 'country_name', 'official_state_name', 'sovereignty',\n",
+       "       'alpha_2_code', 'alpha_3_code', 'mln_2010', 'mln_2011', 'mln_2012',\n",
+       "       'mln_2013', 'mln_2014', 'mln_2015', 'mln_2016', 'mln_2017', 'mln_2018',\n",
+       "       'mln_2019', 'mln_2020', 'mln_2021', 'mln_2022', 'gdp_2010', 'gdp_2011',\n",
+       "       'gdp_2012', 'gdp_2013', 'gdp_2014', 'gdp_2015', 'gdp_2016', 'gdp_2017',\n",
+       "       'gdp_2018', 'gdp_2019', 'gdp_2020', 'gdp_2021', 'gdp_2022', 'tot_2010',\n",
+       "       'tot_2011', 'tot_2012', 'tot_2013', 'tot_2014', 'tot_2015', 'tot_2016',\n",
+       "       'tot_2017', 'tot_2018', 'tot_2019', 'tot_2020', 'tot_2021', 'wom_2010',\n",
+       "       'wom_2011', 'wom_2012', 'wom_2013', 'wom_2014', 'wom_2015', 'wom_2016',\n",
+       "       'wom_2017', 'wom_2018', 'wom_2019', 'wom_2020', 'wom_2021'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "1b86ecd9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "output.to_csv('../data/countries_db.csv')"
+    "output.to_csv('../data/countries_db.csv', index=False)"
    ]
   },
   {
