--- a/notebooks/05_trans_journals.ipynb
+++ b/notebooks/05_trans_journals.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "e667e0a9",
    "metadata": {},
    "source": [
     "# <a id='toc1_'></a>[journals](#toc0_)\n",
@@ -10,41 +11,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "02ed5638",
    "metadata": {},
    "source": [
-    "**Table of contents**<a id='toc0_'></a>    \n",
-    "- [journals](#toc1_)    \n",
-    "    - [Open the documents](#toc1_1_1_)    \n",
-    "    - [Create a table of journals with the journals of this list](#toc1_1_2_)    \n",
-    "    - [Enrich the table with information from the scimago tables](#toc1_1_3_)    \n",
-    "      - [Enrich with the info of the Journals](#toc1_1_3_1_)    \n",
-    "      - [Enrich with the stats of the journals [2010 - 2022]](#toc1_1_3_2_)    \n",
-    "    - [Manage NaN Values](#toc1_1_4_)    \n",
-    "      - [Quartiles](#toc1_1_4_1_)    \n",
-    "      - [rank, docs and other numeric columns](#toc1_1_4_2_)    \n",
-    "      - [Other NaNs](#toc1_1_4_3_)    \n",
-    "      - [Check NaN absence](#toc1_1_4_4_)    \n",
-    "    - [Export the df as .csv](#toc1_1_5_)    \n",
-    "\n",
-    "<!-- vscode-jupyter-toc-config\n",
-    "\tnumbering=false\n",
-    "\tanchor=true\n",
-    "\tflat=false\n",
-    "\tminLevel=1\n",
-    "\tmaxLevel=6\n",
-    "\t/vscode-jupyter-toc-config -->\n",
-    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
+    "INDEX"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "a539021e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Libraries\n",
     "import pandas as pd\n",
+    "\n",
+    "# Countries\n",
+    "import pycountry\n",
     "\n",
     "# Functions\n",
     "import sys\n",
@@ -55,6 +39,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e02ec976",
    "metadata": {},
    "source": [
     "### <a id='toc1_1_1_'></a>[Open the documents](#toc0_)"
@@ -77,6 +62,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6c70b4dc",
    "metadata": {},
    "source": [
     "### <a id='toc1_1_2_'></a>[Create a table of journals with the journals of this list](#toc0_)"
@@ -159,6 +145,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d9fb1f55",
    "metadata": {},
    "source": [
     "### <a id='toc1_1_3_'></a>[Enrich the table with information from the scimago tables](#toc0_)"
@@ -304,6 +291,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "25327f8d",
    "metadata": {},
    "source": [
     "#### <a id='toc1_1_3_1_'></a>[Enrich with the info of the Journals](#toc0_)"
@@ -384,6 +372,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "adb3963d",
    "metadata": {},
    "source": [
     "#### <a id='toc1_1_3_2_'></a>[Enrich with the stats of the journals [2010 - 2022]](#toc0_)"
@@ -554,6 +543,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dbc58247",
    "metadata": {},
    "source": [
     "### <a id='toc1_1_4_'></a>[Manage NaN Values](#toc0_)"
@@ -584,6 +574,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0d459b5f",
    "metadata": {},
    "source": [
     "#### <a id='toc1_1_4_1_'></a>[Quartiles](#toc0_)"
@@ -644,6 +635,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fc67119f",
    "metadata": {},
    "source": [
     "#### <a id='toc1_1_4_2_'></a>[rank, docs and other numeric columns](#toc0_)"
@@ -715,6 +707,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b0aaa49e",
    "metadata": {},
    "source": [
     "#### <a id='toc1_1_4_3_'></a>[Other NaNs](#toc0_)"
@@ -779,6 +772,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1d4ab8e9",
    "metadata": {},
    "source": [
     "#### <a id='toc1_1_4_4_'></a>[Check NaN absence](#toc0_)"
@@ -809,14 +803,368 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f8bbd9e2",
    "metadata": {},
    "source": [
-    "### <a id='toc1_1_5_'></a>[Export the df as .csv](#toc0_)"
+    "### Include Foreign Key: country_id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
+   "id": "f62ca7a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country_id</th>\n",
+       "      <th>country_name</th>\n",
+       "      <th>official_state_name</th>\n",
+       "      <th>sovereignty</th>\n",
+       "      <th>alpha_2_code</th>\n",
+       "      <th>alpha_3_code</th>\n",
+       "      <th>mln_2010</th>\n",
+       "      <th>mln_2011</th>\n",
+       "      <th>mln_2012</th>\n",
+       "      <th>mln_2013</th>\n",
+       "      <th>...</th>\n",
+       "      <th>wom_2012</th>\n",
+       "      <th>wom_2013</th>\n",
+       "      <th>wom_2014</th>\n",
+       "      <th>wom_2015</th>\n",
+       "      <th>wom_2016</th>\n",
+       "      <th>wom_2017</th>\n",
+       "      <th>wom_2018</th>\n",
+       "      <th>wom_2019</th>\n",
+       "      <th>wom_2020</th>\n",
+       "      <th>wom_2021</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>The Islamic Republic of Afghanistan</td>\n",
+       "      <td>UN member state</td>\n",
+       "      <td>AF</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>248</td>\n",
+       "      <td>Åland Islands</td>\n",
+       "      <td>Åland</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>AX</td>\n",
+       "      <td>ALA</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 56 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   country_id    country_name                  official_state_name  \\\n",
+       "0           4     Afghanistan  The Islamic Republic of Afghanistan   \n",
+       "1         248   Åland Islands                                Åland   \n",
+       "\n",
+       "       sovereignty alpha_2_code alpha_3_code  mln_2010  mln_2011  mln_2012  \\\n",
+       "0  UN member state           AF          AFG       0.0       0.0       0.0   \n",
+       "1          Finland           AX          ALA       0.0       0.0       0.0   \n",
+       "\n",
+       "   mln_2013  ...  wom_2012  wom_2013  wom_2014  wom_2015  wom_2016  wom_2017  \\\n",
+       "0       0.0  ...       0.0       0.0       0.0       0.0       0.0       0.0   \n",
+       "1       0.0  ...       0.0       0.0       0.0       0.0       0.0       0.0   \n",
+       "\n",
+       "   wom_2018  wom_2019  wom_2020  wom_2021  \n",
+       "0       0.0       0.0       0.0       0.0  \n",
+       "1       0.0       0.0       0.0       0.0  \n",
+       "\n",
+       "[2 rows x 56 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "countries = pd.read_csv('../data/countries_db.csv', index_col=False)\n",
+    "countries.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "b4960979",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Switzerland', 'United States', 'United Kingdom', 'Poland',\n",
+       "       'China', 'Czech Republic', 'New Zealand', 'India', 'Ireland',\n",
+       "       'Germany', 'Egypt', 'Netherlands', 'United Arab Emirates', 'Italy',\n",
+       "       'Greece', 'South Korea', 'France'], dtype=object)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "journal_countries = journals['Country'].unique()\n",
+    "journal_countries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "45af1c48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country_codes_dict = {}\n",
+    "\n",
+    "for name in journal_countries:\n",
+    "    country = pycountry.countries.get(name=name)\n",
+    "    if country:\n",
+    "        country_codes_dict[name] = int(country.numeric)\n",
+    "    else:\n",
+    "        country_codes_dict[name] = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "fd334147",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Switzerland': 756,\n",
+       " 'United States': 840,\n",
+       " 'United Kingdom': 826,\n",
+       " 'Poland': 616,\n",
+       " 'China': 156,\n",
+       " 'Czech Republic': None,\n",
+       " 'New Zealand': 554,\n",
+       " 'India': 356,\n",
+       " 'Ireland': 372,\n",
+       " 'Germany': 276,\n",
+       " 'Egypt': 818,\n",
+       " 'Netherlands': 528,\n",
+       " 'United Arab Emirates': 784,\n",
+       " 'Italy': 380,\n",
+       " 'Greece': 300,\n",
+       " 'South Korea': None,\n",
+       " 'France': 250}"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "country_codes_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "61cf38e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country_codes_dict['Czech Republic'] = 203\n",
+    "country_codes_dict['South Korea'] = 410"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "0431b3be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Switzerland': 756,\n",
+       " 'United States': 840,\n",
+       " 'United Kingdom': 826,\n",
+       " 'Poland': 616,\n",
+       " 'China': 156,\n",
+       " 'Czech Republic': 203,\n",
+       " 'New Zealand': 554,\n",
+       " 'India': 356,\n",
+       " 'Ireland': 372,\n",
+       " 'Germany': 276,\n",
+       " 'Egypt': 818,\n",
+       " 'Netherlands': 528,\n",
+       " 'United Arab Emirates': 784,\n",
+       " 'Italy': 380,\n",
+       " 'Greece': 300,\n",
+       " 'South Korea': 410,\n",
+       " 'France': 250}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "country_codes_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "a4265e46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "journals['country_id'] = journals['Country'].map(country_codes_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3c7788f",
+   "metadata": {},
+   "source": [
+    "### Rename columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "0915befb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "old_names = ['Country', 'Region', 'Publisher', 'Coverage', 'Categories', 'Areas']\n",
+    "new_names = ['country', 'region', 'publisher', 'coverage', 'categories', 'areas']\n",
+    "\n",
+    "for old, new in zip(old_names, new_names):\n",
+    "    journals = journals.rename(columns={old: new})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d8296f8",
+   "metadata": {},
+   "source": [
+    "### Order columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c5293832",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# journals = pd.read_csv('../data/journals_db.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5e943b9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "journals = journals.rename(columns={'Unnamed: 0': 'journal_id'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "df04f059",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "journals = journals[['journal_id', 'country_id', 'journal_name', 'num_articles', 'region', \n",
+    "                    'publisher', 'coverage', 'categories', 'areas', \n",
+    "                    'sjr_2010', 'quartile_2010', 'hindex_2010', 'docs_2010', \n",
+    "                    'sjr_2011', 'quartile_2011', 'hindex_2011', 'docs_2011', \n",
+    "                    'sjr_2012', 'quartile_2012', 'hindex_2012', 'docs_2012', \n",
+    "                    'sjr_2013', 'quartile_2013', 'hindex_2013', 'docs_2013', \n",
+    "                    'sjr_2014', 'quartile_2014', 'hindex_2014', 'docs_2014', \n",
+    "                    'sjr_2015', 'quartile_2015', 'hindex_2015', 'docs_2015', \n",
+    "                    'sjr_2016', 'quartile_2016', 'hindex_2016', 'docs_2016', \n",
+    "                    'sjr_2017', 'quartile_2017', 'hindex_2017', 'docs_2017', \n",
+    "                    'sjr_2018', 'quartile_2018', 'hindex_2018', 'docs_2018', \n",
+    "                    'sjr_2019', 'quartile_2019', 'hindex_2019', 'docs_2019', \n",
+    "                    'sjr_2020', 'quartile_2020', 'hindex_2020', 'docs_2020', \n",
+    "                    'sjr_2021', 'quartile_2021', 'hindex_2021', 'docs_2021', \n",
+    "                    'sjr_2022', 'quartile_2022', 'hindex_2022', 'docs_2022']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87656901",
+   "metadata": {},
+   "source": [
+    "### Export the df as .csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "87da1c79",
    "metadata": {},
    "outputs": [],
@@ -827,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48c46eaa",
+   "id": "b3ec6a3b",
    "metadata": {},
    "outputs": [],
    "source": []
