--- a/notebooks/Untitled_.ipynb
+++ b/notebooks/Untitled_.ipynb
@@ -415,10 +415,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "544664c0",
+   "id": "fe6d3d32",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82af7745",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "544664c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info = {}\n",
+    "for col in articles.columns:\n",
+    "    info[col]= {'% NaN': np.around(articles[col].isna().sum() / len(articles) * 100),\n",
+    "                'uniques': len(articles['ID'].unique()),\n",
+    "                'type': articles['ID'].dtype}\n",
+    "info"
+   ]
   }
  ],
  "metadata": {
