--- a/notebooks/_load_SQLalchemy.ipynb
+++ b/notebooks/_load_SQLalchemy.ipynb
@@ -2,51 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "2c79c598",
    "metadata": {},
    "source": [
-    "# <a id='toc1_'></a>[Load to SQL](#toc0_)"
+    "# Load to SQL"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "b0200d2d",
    "metadata": {},
    "source": [
-    "**Table of contents**<a id='toc0_'></a>    \n",
-    "- [Load to SQL](#toc1_)    \n",
-    "  - [Create neuropapers_db](#toc1_1_)    \n",
-    "  - [Fill neuropapers_db](#toc1_2_)    \n",
-    "    - [universities](#toc1_2_1_)    \n",
-    "    - [countries](#toc1_2_2_)    \n",
-    "    - [publications](#toc1_2_3_)    \n",
-    "    - [journals](#toc1_2_4_)    \n",
-    "    - [affiliations](#toc1_2_5_)    \n",
-    "    - [first_author](#toc1_2_6_)    \n",
-    "    - [last_author](#toc1_2_7_)    \n",
-    "\n",
-    "<!-- vscode-jupyter-toc-config\n",
-    "\tnumbering=false\n",
-    "\tanchor=true\n",
-    "\tflat=false\n",
-    "\tminLevel=1\n",
-    "\tmaxLevel=6\n",
-    "\t/vscode-jupyter-toc-config -->\n",
-    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
+    "INDEX"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "49f6eab3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %pip install SQLAlchemy==1.4.36\n",
-    "# %pip install pymysql"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
    "id": "bc5d67c8",
    "metadata": {},
    "outputs": [],
@@ -54,15 +26,21 @@
     "# Libraries\n",
     "import pandas as pd\n",
     "\n",
+    "# Functions\n",
+    "import sys\n",
+    "sys.path.append('../src')\n",
+    "from support_sql import *\n",
+    "\n",
     "# SQLAlchemy ✨\n",
     "from sqlalchemy import create_engine"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "b1c1295b",
    "metadata": {},
    "source": [
-    "## <a id='toc1_1_'></a>[Create neuropapers_db](#toc0_)"
+    "## Create neuropapers_db"
    ]
   },
   {
@@ -110,6 +88,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a68c4207",
+   "metadata": {},
+   "source": [
+    "## Create the relationships"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "86eb143a",
@@ -121,7 +107,309 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "841e279e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dictionary to create the structure of the tables:\n",
+    "\n",
+    "db_struc = {'countries': {'primary_keys': ['country_id']},\n",
+    "            \n",
+    "            'journals': {'primary_keys': ['journal_id'],\n",
+    "                         'foreign_keys': [{'fk': ['country_id'],\n",
+    "                                           'reference_table': 'countries',\n",
+    "                                           'reference_column': 'country_id'}]},\n",
+    "            \n",
+    "            'publications': {'primary_keys': ['pub_id'],\n",
+    "                             'foreign_keys': [{'fk': ['journal_id'],\n",
+    "                                               'reference_table': 'journals',\n",
+    "                                               'reference_column': 'journal_id'}]},\n",
+    "            \n",
+    "            'researchers': {'primary_keys': ['res_id']},\n",
+    "            'affiliations': {'primary_keys': ['aff_id'],\n",
+    "                             'foreign_keys': [{'fk': ['country_id'],\n",
+    "                                               'reference_table': 'countries',\n",
+    "                                               'reference_column': 'country_id'}]},\n",
+    "            \n",
+    "            'pub_res': {'primary_keys': ['pub_id', 'res_id'], \n",
+    "                        'foreign_keys' : [ {'fk': ['pub_id'], \n",
+    "                                            'reference_table': 'publications', \n",
+    "                                            'reference_column': 'pub_id'}, \n",
+    "                                           {'fk': ['res_id'], \n",
+    "                                            'reference_table': 'researchers', \n",
+    "                                            'reference_column': 'res_id'}]},\n",
+    "            \n",
+    "            'pub_aff': {'primary_keys': ['pub_id', 'aff_id'], \n",
+    "                        'foreign_keys' : [ {'fk': ['pub_id'], \n",
+    "                                            'reference_table': 'publications', \n",
+    "                                            'reference_column': 'pub_id'}, \n",
+    "                                           {'fk': ['aff_id'], \n",
+    "                                            'reference_table': 'affiliations', \n",
+    "                                            'reference_column': 'aff_id'}]},\n",
+    "            \n",
+    "            'jrn_res': {'primary_keys': ['journal_id', 'res_id'], \n",
+    "                        'foreign_keys' : [ {'fk': ['journal_id'], \n",
+    "                                            'reference_table': 'journals', \n",
+    "                                            'reference_column': 'journal_id'}, \n",
+    "                                           {'fk': ['res_id'], \n",
+    "                                            'reference_table': 'researchers', \n",
+    "                                            'reference_column': 'res_id'}]},\n",
+    "            \n",
+    "            'aff_res': {'primary_keys': ['aff_id', 'res_id'], \n",
+    "                        'foreign_keys' : [ {'fk': ['aff_id'], \n",
+    "                                            'reference_table': 'affiliations', \n",
+    "                                            'reference_column': 'aff_id'}, \n",
+    "                                           {'fk': ['res_id'], \n",
+    "                                            'reference_table': 'researchers', \n",
+    "                                            'reference_column': 'res_id'}]}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a26931e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e8b3b33",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4384cf5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fe2c16b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dynamically create models based on the dictionary\n",
+    "\n",
+    "for table_name, table_data in db_struc.items():\n",
+    "    class_name = table_name.capitalize()\n",
+    "\n",
+    "    class Model(Base):\n",
+    "        __tablename__ = table_name\n",
+    "        primary_keys = table_data['primary_keys']\n",
+    "        for pk in primary_keys:\n",
+    "            setattr(Model, pk, Column(Integer, primary_key=True))\n",
+    "\n",
+    "        foreign_keys = table_data.get('foreign_keys', [])\n",
+    "        for fk_data in foreign_keys:\n",
+    "            fk_name = fk_data['fk'][0]\n",
+    "            reference_table = fk_data['reference_table']\n",
+    "            reference_column = fk_data['reference_column']\n",
+    "            setattr(Model, fk_name, Column(Integer, ForeignKey(f'{reference_table}.{reference_column}')))\n",
+    "            setattr(Model, reference_table.lower(), relationship(reference_table.capitalize()))\n",
+    "\n",
+    "    globals()[class_name] = Model"
+   ]
+  },
+  {
    "cell_type": "markdown",
+   "id": "cc9fa995",
+   "metadata": {},
+   "source": [
+    "## Create the tables in the database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0477e06f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Base.metadata.create_all(engine)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "209a9303",
+   "metadata": {},
+   "source": [
+    "## Fill the tables\n",
+    "### Import pandas dataframes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc3ff7ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_dict = {'countries': df_countries,\n",
+    "           'journals': df_journals,\n",
+    "           'publications': df_publications,\n",
+    "           'researchers': df_researchers,\n",
+    "           'affiliations': df_affiliations,\n",
+    "           'pub_res': df_pub_res,\n",
+    "           'pub_aff': df_pub_aff,\n",
+    "           'jrn_res': df_jrn_res,\n",
+    "           'aff_res': df_aff_res}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "517c98dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for table_name, df in df_dict.items():\n",
+    "    df.to_sql(table_name, con=engine, if_exists='replace', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efe9f3a9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c35bc27",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "196e66f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce0e4dbb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98527787",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7aa4a905",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a base class to declare models\n",
+    "Base = declarative_base()\n",
+    "\n",
+    "# Define models for each table\n",
+    "class Country(Base):\n",
+    "    __tablename__ = 'countries'\n",
+    "    country_id = Column(Integer, primary_key=True)\n",
+    "    # Add more columns as needed\n",
+    "    name = Column(String(255), nullable=False)\n",
+    "\n",
+    "class Journal(Base):\n",
+    "    __tablename__ = 'journals'\n",
+    "    journal_id = Column(Integer, primary_key=True)\n",
+    "    country_id = Column(Integer, ForeignKey('countries.country_id'))\n",
+    "    country = relationship('Country')\n",
+    "    # Add more columns as needed\n",
+    "    name = Column(String(255), nullable=False)\n",
+    "\n",
+    "class Publication(Base):\n",
+    "    __tablename__ = 'publications'\n",
+    "    pub_id = Column(Integer, primary_key=True)\n",
+    "    journal_id = Column(Integer, ForeignKey('journals.journal_id'))\n",
+    "    journal = relationship('Journal')\n",
+    "    # Add more columns as needed\n",
+    "    title = Column(String(255), nullable=False)\n",
+    "    publication_date = Column(String(20))\n",
+    "\n",
+    "class Researcher(Base):\n",
+    "    __tablename__ = 'researchers'\n",
+    "    res_id = Column(Integer, primary_key=True)\n",
+    "    # Add more columns as needed\n",
+    "    name = Column(String(255), nullable=False)\n",
+    "    affiliation_id = Column(Integer, ForeignKey('affiliations.aff_id'))\n",
+    "    affiliation = relationship('Affiliation')\n",
+    "\n",
+    "class Affiliation(Base):\n",
+    "    __tablename__ = 'affiliations'\n",
+    "    aff_id = Column(Integer, primary_key=True)\n",
+    "    country_id = Column(Integer, ForeignKey('countries.country_id'))\n",
+    "    country = relationship('Country')\n",
+    "    # Add more columns as needed\n",
+    "    name = Column(String(255), nullable=False)\n",
+    "\n",
+    "class PublicationResearcher(Base):\n",
+    "    __tablename__ = 'pub_res'\n",
+    "    pub_id = Column(Integer, ForeignKey('publications.pub_id'), primary_key=True)\n",
+    "    res_id = Column(Integer, ForeignKey('researchers.res_id'), primary_key=True)\n",
+    "    publication = relationship('Publication')\n",
+    "    researcher = relationship('Researcher')\n",
+    "\n",
+    "class PublicationAffiliation(Base):\n",
+    "    __tablename__ = 'pub_aff'\n",
+    "    pub_id = Column(Integer, ForeignKey('publications.pub_id'), primary_key=True)\n",
+    "    aff_id = Column(Integer, ForeignKey('affiliations.aff_id'), primary_key=True)\n",
+    "    publication = relationship('Publication')\n",
+    "    affiliation = relationship('Affiliation')\n",
+    "\n",
+    "class JournalResearcher(Base):\n",
+    "    __tablename__ = 'jrn_res'\n",
+    "    journal_id = Column(Integer, ForeignKey('journals.journal_id'), primary_key=True)\n",
+    "    res_id = Column(Integer, ForeignKey('researchers.res_id'), primary_key=True)\n",
+    "    journal = relationship('Journal')\n",
+    "    researcher = relationship('Researcher')\n",
+    "\n",
+    "class AffiliationResearcher(Base):\n",
+    "    __tablename__ = 'aff_res'\n",
+    "    aff_id = Column(Integer, ForeignKey('affiliations.aff_id'), primary_key=True)\n",
+    "    res_id = Column(Integer, ForeignKey('researchers.res_id'), primary_key=True)\n",
+    "    affiliation = relationship('Affiliation')\n",
+    "    researcher = relationship('Researcher')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d4b96e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the tables in the database\n",
+    "Base.metadata.create_all(engine)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7023300",
    "metadata": {},
    "source": [
     "___\n",
@@ -296,6 +584,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4a07ce87",
    "metadata": {},
    "source": [
     "### <a id='toc1_2_2_'></a>[countries](#toc0_)"
@@ -515,6 +804,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0db94a7c",
    "metadata": {},
    "source": [
     "### <a id='toc1_2_3_'></a>[publications](#toc0_)"
@@ -530,6 +820,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3fe1e655",
    "metadata": {},
    "source": [
     "### <a id='toc1_2_4_'></a>[journals](#toc0_)"
@@ -545,6 +836,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8be90fd5",
    "metadata": {},
    "source": [
     "### <a id='toc1_2_5_'></a>[affiliations](#toc0_)"
@@ -560,6 +852,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9de3c06e",
    "metadata": {},
    "source": [
     "### <a id='toc1_2_6_'></a>[first_author](#toc0_)"
@@ -575,6 +868,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bb0d633b",
    "metadata": {},
    "source": [
     "### <a id='toc1_2_7_'></a>[last_author](#toc0_)"
